Package_Tools/include-C/vips/h/almostdeprecated.h

#define IM_ALMOSTDEPRECATED_H
/* Was public, now deprecated.
 */
typedef enum {
	IM_BBITS_BYTE = 8,
	IM_BBITS_SHORT = 16,
	IM_BBITS_INT = 32,
	IM_BBITS_FLOAT = 32,
	IM_BBITS_COMPLEX = 64,
	IM_BBITS_DOUBLE = 64,
	IM_BBITS_DPCOMPLEX = 128
} VipsBBits;
/* Used to define a region of interest for im_extract() etc. Too boring to be
 * public API, see im_extract_area() etc.
 */
typedef struct {
	int xstart;
	int ystart;
	int xsize;
	int ysize;
	int chsel; /* 1 2 3 or 0, for r g b or all respectively
				*(channel select)	*/
} IMAGE_BOX;
//xxxx VIPS_DEPRECATED
int im_extract(IMAGE *, IMAGE *, IMAGE_BOX *);
//xxxx VIPS_DEPRECATED
DOUBLEMASK *im_measure(IMAGE *im, IMAGE_BOX *box, int h, int v,
	int *sel, int nsel, const char *name);
//xxxx VIPS_DEPRECATED
gboolean im_isuint(IMAGE *im);
//xxxx VIPS_DEPRECATED
gboolean im_isint(IMAGE *im);
//xxxx VIPS_DEPRECATED
gboolean im_isfloat(IMAGE *im);
//xxxx VIPS_DEPRECATED
gboolean im_isscalar(IMAGE *im);
//xxxx VIPS_DEPRECATED
gboolean im_iscomplex(IMAGE *im);
//xxxx VIPS_DEPRECATED
int im_c2ps(IMAGE *in, IMAGE *out);
//xxxx VIPS_DEPRECATED
int im_clip(IMAGE *in, IMAGE *out);
#define MASK_IDEAL_HIGHPASS IM_MASK_IDEAL_HIGHPASS
#define MASK_IDEAL_LOWPASS IM_MASK_IDEAL_LOWPASS
#define MASK_BUTTERWORTH_HIGHPASS IM_MASK_BUTTERWORTH_HIGHPASS
#define MASK_BUTTERWORTH_LOWPASS IM_MASK_BUTTERWORTH_LOWPASS
#define MASK_GAUSS_HIGHPASS IM_MASK_GAUSS_HIGHPASS
#define MASK_GAUSS_LOWPASS IM_MASK_GAUSS_LOWPASS
#define MASK_IDEAL_RINGPASS IM_MASK_IDEAL_RINGPASS
#define MASK_IDEAL_RINGREJECT IM_MASK_IDEAL_RINGREJECT
#define MASK_BUTTERWORTH_RINGPASS IM_MASK_BUTTERWORTH_RINGPASS
#define MASK_BUTTERWORTH_RINGREJECT IM_MASK_BUTTERWORTH_RINGREJECT
#define MASK_GAUSS_RINGPASS IM_MASK_GAUSS_RINGPASS
#define MASK_GAUSS_RINGREJECT IM_MASK_GAUSS_RINGREJECT
#define MASK_IDEAL_BANDPASS IM_MASK_IDEAL_BANDPASS
#define MASK_IDEAL_BANDREJECT IM_MASK_IDEAL_BANDREJECT
#define MASK_BUTTERWORTH_BANDPASS IM_MASK_BUTTERWORTH_BANDPASS
#define MASK_BUTTERWORTH_BANDREJECT IM_MASK_BUTTERWORTH_BANDREJECT
#define MASK_GAUSS_BANDPASS IM_MASK_GAUSS_BANDPASS
#define MASK_GAUSS_BANDREJECT IM_MASK_GAUSS_BANDREJECT
#define MASK_FRACTAL_FLT IM_MASK_FRACTAL_FLT
#define MaskType ImMaskType
/* Copy and swap types.
 */
typedef enum {
	IM_ARCH_NATIVE,
	IM_ARCH_BYTE_SWAPPED,
	IM_ARCH_LSB_FIRST,
	IM_ARCH_MSB_FIRST
} im_arch_type;
//xxxx VIPS_DEPRECATED
gboolean im_isnative(im_arch_type arch);
//xxxx VIPS_DEPRECATED
int im_copy_from(IMAGE *in, IMAGE *out, im_arch_type architecture);
/* Backwards compatibility macros.
 */
#define im_clear_error_string() im_error_clear()
#define im_errorstring() im_error_buffer()