Package_Tools/include-C/vips/almostdeprecated.pas

unit almostdeprecated;

interface

uses
  fp_glib2;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ Old and broken stuff that we still enable by default, but don't document
 * and certainly don't recommend.
 *
 * 30/6/09
 * 	- from vips.h
  }
{

	This file is part of VIPS.

	VIPS is free software; you can redistribute it and/or modify
	it under the terms of the GNU Lesser General Public License as published by
	the Free Software Foundation; either version 2 of the License, or
	(at your option) any later version.

	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU Lesser General Public License for more details.

	You should have received a copy of the GNU Lesser General Public License
	along with this program; if not, write to the Free Software
	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
	02110-1301  USA

  }
{

	These files are distributed with VIPS - http://www.vips.ecs.soton.ac.uk

  }
{$ifndef IM_ALMOSTDEPRECATED_H}
{$define IM_ALMOSTDEPRECATED_H}
{ C++ extern C conditionnal removed }
{__cplusplus }
{ Was public, now deprecated.
  }
type
  PVipsBBits = ^TVipsBBits;
  TVipsBBits =  Longint;
  Const
    IM_BBITS_BYTE = 8;
    IM_BBITS_SHORT = 16;
    IM_BBITS_INT = 32;
    IM_BBITS_FLOAT = 32;
    IM_BBITS_COMPLEX = 64;
    IM_BBITS_DOUBLE = 64;
    IM_BBITS_DPCOMPLEX = 128;
;
{ Used to define a region of interest for im_extract() etc. Too boring to be
 * public API, see im_extract_area() etc.
  }
{ 1 2 3 or 0, for r g b or all respectively
				*(channel select)	 }
type
  PIMAGE_BOX = ^TIMAGE_BOX;
  TIMAGE_BOX = record
      xstart : longint;
      ystart : longint;
      xsize : longint;
      ysize : longint;
      chsel : longint;
    end;
{xxxx VIPS_DEPRECATED }

function im_extract(para1:PIMAGE; para2:PIMAGE; para3:PIMAGE_BOX):longint;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_measure(im:PIMAGE; box:PIMAGE_BOX; h:longint; v:longint; sel:Plongint; 
           nsel:longint; name:Pchar):PDOUBLEMASK;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_isuint(im:PIMAGE):Tgboolean;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_isint(im:PIMAGE):Tgboolean;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_isfloat(im:PIMAGE):Tgboolean;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_isscalar(im:PIMAGE):Tgboolean;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_iscomplex(im:PIMAGE):Tgboolean;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_c2ps(in:PIMAGE; out:PIMAGE):longint;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_clip(in:PIMAGE; out:PIMAGE):longint;cdecl;external libvips;
const
  MASK_IDEAL_HIGHPASS = IM_MASK_IDEAL_HIGHPASS;  
  MASK_IDEAL_LOWPASS = IM_MASK_IDEAL_LOWPASS;  
  MASK_BUTTERWORTH_HIGHPASS = IM_MASK_BUTTERWORTH_HIGHPASS;  
  MASK_BUTTERWORTH_LOWPASS = IM_MASK_BUTTERWORTH_LOWPASS;  
  MASK_GAUSS_HIGHPASS = IM_MASK_GAUSS_HIGHPASS;  
  MASK_GAUSS_LOWPASS = IM_MASK_GAUSS_LOWPASS;  
  MASK_IDEAL_RINGPASS = IM_MASK_IDEAL_RINGPASS;  
  MASK_IDEAL_RINGREJECT = IM_MASK_IDEAL_RINGREJECT;  
  MASK_BUTTERWORTH_RINGPASS = IM_MASK_BUTTERWORTH_RINGPASS;  
  MASK_BUTTERWORTH_RINGREJECT = IM_MASK_BUTTERWORTH_RINGREJECT;  
  MASK_GAUSS_RINGPASS = IM_MASK_GAUSS_RINGPASS;  
  MASK_GAUSS_RINGREJECT = IM_MASK_GAUSS_RINGREJECT;  
  MASK_IDEAL_BANDPASS = IM_MASK_IDEAL_BANDPASS;  
  MASK_IDEAL_BANDREJECT = IM_MASK_IDEAL_BANDREJECT;  
  MASK_BUTTERWORTH_BANDPASS = IM_MASK_BUTTERWORTH_BANDPASS;  
  MASK_BUTTERWORTH_BANDREJECT = IM_MASK_BUTTERWORTH_BANDREJECT;  
  MASK_GAUSS_BANDPASS = IM_MASK_GAUSS_BANDPASS;  
  MASK_GAUSS_BANDREJECT = IM_MASK_GAUSS_BANDREJECT;  
  MASK_FRACTAL_FLT = IM_MASK_FRACTAL_FLT;  
  MaskType = ImMaskType;  
{ Copy and swap types.
  }
type
  Pim_arch_type = ^Tim_arch_type;
  Tim_arch_type =  Longint;
  Const
    IM_ARCH_NATIVE = 0;
    IM_ARCH_BYTE_SWAPPED = 1;
    IM_ARCH_LSB_FIRST = 2;
    IM_ARCH_MSB_FIRST = 3;
;
{xxxx VIPS_DEPRECATED }

function im_isnative(arch:Tim_arch_type):Tgboolean;cdecl;external libvips;
{xxxx VIPS_DEPRECATED }
function im_copy_from(in:PIMAGE; out:PIMAGE; architecture:Tim_arch_type):longint;cdecl;external libvips;
{ Backwards compatibility macros.
  }
{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function im_clear_error_string : longint;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function im_errorstring : longint;
